# Downtown

./: .gitignore  Makefile.am  README.md  average.c  average.h  bytelist-macro.h  bytelist.c  bytelist.h  centre.c  centre.h  charlist.c  charlist.h  colour.c  colour.h  configure.ac  confound.c  csv.c  csv.h  delay.c  delay.h  delta.c  delta.h  downtown-core.c  downtown-filter.c  downtown-sig.c  downtown.c  downtown.h  downtown_filter.c  dumpframe.c  dumpframe.h  frameinfo.c  frameinfo.h  get-stats.c  histogram.c  histogram.h  injector.c  injector.h  json.c  json.h  log.c  (+46 more)
js/: circle.js  clock.js  profile.js  proxtree.js  sig.js  testcard.js  transform.js  vid.js
js/lib/: MovieMaker.js
labs/power/: average.json  index.html
labs/power/css/: jquery-ui.css  jquery-ui.min.css  style.css
labs/power/js/: power.js
labs/spiral/: index.html
labs/spiral/css/: style.css
labs/spiral/js/: spiral.js
labs/zigzag/: index.html
labs/zigzag/css/: style.css
labs/zigzag/js/: zigzag.js
lib/: ColourTools.js  MovieMaker.js
lib/Downtown/: Average.js  BitBox.js  Decay.js  Profile.js  Resample.js  StandardFunctions.js
lib/MovieMaker/: DynamicProperty.js  Util.js
misc/: test.sh  wibble.sh
profiles/: default.profile  s128.r_rate=1.500,a_rate=3.375.profile  s128.r_rate=11.391,a_rate=11.391.profile  s128.r_rate=11.391,a_rate=7.594.profile  s128.r_rate=17.086,a_rate=7.594.profile  s128.r_rate=2.250,a_rate=3.375.profile  s128.r_rate=2.250,a_rate=5.062.profile  s128.r_rate=3.375,a_rate=5.062.profile  s128.r_rate=5.062,a_rate=5.062.profile  s128.r_rate=5.062,a_rate=7.594.profile  s128.r_rate=7.594,a_rate=5.062.profile  s128.r_rate=7.594,a_rate=7.594.profile  s256.r_rate=1.500,a_rate=3.375.profile  s256.r_rate=11.391,a_rate=11.391.profile  s256.r_rate=11.391,a_rate=7.594.profile  s256.r_rate=2.250,a_rate=3.375.profile  s256.r_rate=2.250,a_rate=5.062.profile  s256.r_rate=2.250,a_rate=7.594.profile
ref/soundchip/: main.c
scripts/: example.sh  new_filter.sh  rate.gnuplot  refactorish.pl  rms.gnuplot  rms.pl
t/: .gitignore  Makefile.am  average.c  bytelist-one.c  bytelist.c  charlist.c  colour.c  csv.c  framework.c  json.c  model.c  numlist.c  numpipe.c  profile.c  quadtree.c  resample.c  sampler.c  signature.c  tap.c  tap.h  tap2-test.c  tap2.c  tap2.h  tb_convolve.c  util.c  yuv4mpeg2.c  zigzag  zigzag.c
t/data/: .gitignore  profile.json  sig.json
test/: Base.js  Circle.js  Clips.js  Dynamic.js  MovieMakerSpec.js  Sequence.js  Transform.js  Util.js
test/Downtown/: Average.js  Decay.js  Profile.js  Resample.js  StandardFunctions.js
tools/: csv2json.pl  decode-dat.pl  fake-trace.pl  make-profile.pl  mk-graph.pl  mk-sin.pl  mk-timebend.pl  pap.sh  pep.sh  pip.sh  pop.sh  pup.sh  sig.sh  spirals.pl  summate.js  summate.sh  sweep.sh  test-convolve.sh  testreel.sh  timebend.sh  unity.pl
